@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2024-12-16T01:13:08Z",
+  "timestamp" : "2024-12-16T12:30:23Z",
   "replies" : 0,
-  "views" : 1
+  "views" : 4
 }
