@@ -1,3 +1,9 @@
+2024-12-16T12:30:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12352673771 # 1018
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-12-16
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3360 / 0 3363 / +0 +3
+
 2024-12-16T01:13:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12344056802 # 1017
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-12-16
